# EDRobot

./: .gitignore  CMakeLists.txt  Capturer.cpp  Capturer.h  Configuration.cpp  EDRobot.cmd.in  EDWidget.cpp  EDWidget.h  Keyboard.cpp  Keyboard.h  LICENSE  Master.cpp  Master.h  README.md  Task.cpp  Task.h  Template.cpp  Template.h  TradeItems.cpp  TradeItems.h  UI.cpp  UI.h  Utils.cpp  Utils.h  actions.json5  build.bat  calibration.json5  configuration.json5  gettext.bat  install.bat  logging.conf  main.cpp  pch.h  screens.json5  tmp.txt  vcpkg.json
config/: actions.json5  commodity-database.json5  configuration.json5  logging.conf  screens.json5
config/locales/: EDRobot.pot
config/locales/ru/LC_MESSAGES/: EDRobot.mo  EDRobot.po
config/tessdata/: edo.traineddata
dirlistener/: ReadDirectoryChanges.cpp  ReadDirectoryChangesPrivate.cpp
locales/: EDRobot.pot
src/: CaptureDX11.h  CaptureDXGI.cpp  Capturer.cpp  Capturer.h  Configuration.cpp  Configuration.h  EDWidget.cpp  EDWidget.h  FuzzyMatch.cpp  FuzzyMatch.h  Keyboard.cpp  Keyboard.h  Master.cpp  Master.h  Task.cpp  Task.h  Template.cpp  Template.h  UI.cpp  UI.h  Utils.cpp  Utils.h  main.cpp  pch.h
src/ui/: UICalibration.cpp  UICalibration.h  UIDialog.cpp  UIDialog.h  UIManager.cpp  UIManager.h  UISelectRect.cpp  UISelectRect.h  UISellInput.cpp  UISellInput.h  UIStartupDialog.cpp  UIStartupDialog.h  UIToast.cpp  UIToast.h  UIWindow.cpp  UIWindow.h
training/tesseract/: letters.txt
training/tesseract/commodities-rus/: advancedcatalysers-rus.gt.txt  advancedmedicines-rus.gt.txt  advert1-rus.gt.txt  aerialedenapple-rus.gt.txt  aganipperush-rus.gt.txt  agriculturalmedicines-rus.gt.txt  agronomictreatment-rus.gt.txt  alacarakmoskinart-rus.gt.txt  albinoquechuamammoth-rus.gt.txt  alexandrite-rus.gt.txt  algae-rus.gt.txt  alieneggs-rus.gt.txt  altairianskin-rus.gt.txt  aluminium-rus.gt.txt  alyabodilysoap-rus.gt.txt  ancientkey-rus.gt.txt  ancientorb-rus.gt.txt  ancientrelic-rus.gt.txt  ancienttablet-rus.gt.txt  ancienttotem-rus.gt.txt  ancienturn-rus.gt.txt  anduligafireworks-rus.gt.txt  animaleffigies-rus.gt.txt  animalmeat-rus.gt.txt  animalmonitors-rus.gt.txt  antiquejewellery-rus.gt.txt  anynacoffee-rus.gt.txt  apavietii-rus.gt.txt  aquaponicsystems-rus.gt.txt  aroucaconventualsweets-rus.gt.txt  articulationmotors-rus.gt.txt  assaultplans-rus.gt.txt  atmosphericextractors-rus.gt.txt  autofabricators-rus.gt.txt  azcancriformula42-rus.gt.txt  bakedgreebles-rus.gt.txt  baltahsinevacuumkrill-rus.gt.txt  bankiamphibiousleather-rus.gt.txt  basicmedicines-rus.gt.txt  basicnarcotics-rus.gt.txt  (+324 more)
training/tesseract/manual-rus/: manual_10-rus.gt.txt  manual_11-rus.gt.txt  manual_12-rus.gt.txt  manual_13-rus.gt.txt  manual_14-rus.gt.txt  manual_15-rus.gt.txt  manual_16-rus.gt.txt  manual_2-rus.gt.txt  manual_3-rus.gt.txt  manual_4-rus.gt.txt  manual_5-rus.gt.txt  manual_6-rus.gt.txt  manual_7-rus.gt.txt  manual_8-rus.gt.txt  manual_9-rus.gt.txt
training/tesseract/ui-rus/: 16835cr-rus.gt.txt  1_028_976.gt.txt  23_681.gt.txt  295_804.gt.txt  358_749.gt.txt  690cr-rus.gt.txt  btn-apply-rus.gt.txt  btn-buy-rus.gt.txt  btn-sell-rus.gt.txt  line1-rus.gt.txt  line2-rus.gt.txt  m-1780cr-rus.gt.txt
ui/: Dialogs.rc  resource.h
